fix padding on main-content tablet breakpoint, reduce gap in projects-scroll on tablet breakpoint.

--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -18,7 +18,7 @@
     }
 
     .layout-wrapper .main-content {
-        padding: 2rem;
+        padding: 1.5rem;
         min-width: 0;
     }
 }
